# spacy_API_PLS

./: api.py  extraction_report.txt  file.txt  file_01.txt  file_02.txt  file_03.txt  file_04.txt  pyproject.toml  sample_input.txt  sample_input_01.txt  sample_input_02.txt  sample_input_all.txt  sample_input_all_01.txt  sumario_body_payload.json
extractors/extracting_01/: body_refind.py  body_refind_01.py  entities.py  main.py  models.py  readme  relations.py  segmenter.py
extractors/extracting_02/: entities.py  entities_01.py  main.py  main_01.py  sample_input.txt
extractors/extracting_02/body_extraction/: __init__.py  align.py  anchors.py  body_taxonomy.py  config.py  debug_print.py  debug_tools.py  extract.py  features.py  finders.py  matchers.py  postprocess.py  schemas.py  scorer.py  scoring.py  sections.py  spans.py  taxonomy.py  text_norm.py  title_finders.py  title_index.py  titles_bol.py  windowing.py
extractors/extracting_02/entities/: __init__.py  bundle.py  constants.py  debug_print.py  headings.py  items.py  linking.py  normalization.py  org_detection.py  parser.py  sections_instruments.py  split_sumario.py  taxonomy.py
pdf_ocr_extractor/: __init__.py  appsettings.json  config.py  core.py  logutil.py  main.py  models.py  ocr_engine.py  processing.py  runner.py  text_extractors.py  text_regions.py
pdf_ocr_extractor/output/: IIISerie-004-2024-02-27.txt
